redesign/css/cyclescape.css
/* ... */
ul.planning-applications li a.hide {background-color: #dfdfdf; color: black; padding: 5px 10px; border-radius: 25px; text-decoration: none; box-shadow: 0 3px 8px 0 rgba(0,0,0,0.12), 0 3px 1px 0 rgba(0,0,0,0.04);}
ul.planning-applications li a.hide:hover {background-color: #c7c7c7;}
ul.application-types {list-style-type: none; padding: 0; margin: 0;}
ul.application-types li {display: inline-block; padding: 2.5px 15px 2.5px 5px; margin: 2.5px; color: white; border-radius: 25px;}
ul.application-types li label {color: white;}
.planning-applications input.filter {border: 1px solid #eeeeee; font-size: 20px; padding: 10px 20px; border-radius: 25px; margin: 20px; width: 100%;}


/* Dark mode */
@media (prefers-color-scheme: dark) {
    #top-menu {background-color: #AC3E27;}
    #top-menu h1 {color: white;}
    
    h1, h2 {color: #ce5740;}
    h3, h4, h5, h6, body, select, textarea, label {color: white;}
    .drop-cap:first-child:first-letter {color: #ce5740;}

    #shade.white {background-color:rgba(0, 0, 0, 0.558);} 
    
    body {background-color: #2D303E;}
    nav {background-color: #3B3F50;}
    nav i {color: #eeeeee;}
    nav li {color: #eeeeee;}
    nav li.active {background-color: #63646d; box-shadow: 0 3px 8px 0 rgba(170, 170, 170, 0.12), 0 3px 1px 0 rgba(145, 145, 145, 0.04);}
    nav li:hover {background-color: #c0c0c0a6; color: white;}

    div.search {background-color: #63646D; color: white;}
    div.search.expanded i {color: #963E2C;}
    div.search:hover {background-color: rgb(167, 167, 167);}
    div.search li {color: #963E2C;}

    button.primary {background-color: #ce5740; color: white;}
    button.primary:hover {background-color: #e66d54;}

    .widget h2 {background-color: #1D8B5A; color: white;}
    .map-controls {color: white;}
    .map-controls {background-color: rgba(29, 3, 3, 0.671)}
    div.controls ul.map-buttons li.active {background-color: #ffffff4d;}
    div.controls ul.map-buttons li:hover {background-color: #ffffff73;}

    ul.tags li.tag {background-color: #1d8b5a; color: white; opacity: 0.8;}
    ul.tags li.tag:hover {opacity: 1; background: #22b170;}
    ul.tags li.large-tag label {color: white;}

    ul.avatars li a {color: white;}

    .ios-segmented-control {background: #3B3F50;}
    .ios-segmented-control .option label {color: white;}
    .ios-segmented-control .selection {background: #63646D;}

    ul.discussions li {background-color: #3B3F50;}
    ul.discussions li div.content p {color: white;}
    ul.discussions li a:hover, ul.deadlines li a:hover {background-color: #5f6169;}
    ul.discussions li div.minimap .unread p {background-color: #ce5740; color: white;}

    .new-discussion div.category.tags p {color: black;}

    ul.thread li.reply .content {border: none;}
    ul.thread li .content a.timestamp {color: white;}
    ul.thread li.reply .reply-footer {background-color: #2D303E;}

    .widget .title {color: #eeeeee; background-color: #1d8b5a;}

    a.action {background-color: #3B3F50;}
    a.action:hover {background-color: #53586d;}
    a.action p.description, a.action i {color: white;}

    ul.deadlines .content h2 {color: white;}
    ul.deadlines .date h3 {color: #ce5740;}

    ul.thread li .content h3 {color: white;}

    ul.library li h2 {color: white;}
    ul.library li {background-color: #3B3F50;}
    ul.library li:hover {background-color: #6a6e80;}

    div.location i {background-color: #3b3f5046;}
    div.location i:hover {background-color: #787c8fa8;}

    ul.planning-applications li h2 {color: white;}
    ul.planning-applications li:hover {background-color: #3B3F50;}

    .browse-issues ul.issues li {text-align: center;}
    .browse-issues ul.issues li:hover {background-color: #5f6169;}
    .browse-issues ul.issues li h2 {background-color: #1d8b5a; color: white;}
    .browse-issues ul.issues li a p {color: white;}

    .index div.tags {background-color: #2d303e54;}
    .index ul.tags li {background-color: #1d8b5a; color: white; opacity: 0.8;}
    .index ul.tags li:hover {opacity: 1; background: #22b170;}

    .locationModal div.controls {background-color: rgba(54, 54, 54, 0.671);}

    form .radio, form .category {background-color: rgba(54, 54, 54, 0.671);}
    .new-discussion .main-content form>label {color: #1d8b5a;}

}


/* Responsive */
@media (max-width: 1000px) {
    nav {display: none;}
    div.search {z-index: 98;}
    button#hamburger {display: inline-block;}
    #content {margin-left: 0; margin-top: 60px;}
    #top-menu {display: flex;}
    
    ul.discussions>h2, ul.deadlines>h2 {display: block;}
    
    div.location {margin: 5px 2.5px;}
}

@media (max-width: 992px) {
    .locationModal img.map {height: 100%; border-radius: 0;}
    .locationModal div.controls {padding: 10px; bottom: 0; width: calc(100% - 10px); margin: 5px; top: unset;}
    .locationModal h3.icon.text-centered {display: none;}
}
/* ... */

